<resources>
    <string name="app_name">SynergySportAndroid</string>

    <!--StartTrainingScreen-->
    <string name="start_training_fragment_title">StartTrainingFragment</string>
    <string name="start_training_button">Старт</string>

    <!--AuthScreen-->
    <string name="input_username_field">Введите имя пользователя</string>
    <string name="input_password_field">Введите пароль</string>
    <string name="auth_button_title">Вход</string>
    <string name="error_auth_message">Неверный логин или пароль</string>
    <string name="login_title">Войти</string>
    <string name="login_text_view_title">Логин</string>
    <string name="password_text_view_title">Пароль</string>

    <!--FirstStartScreen-->
    <string name="first_start_screen_title">Двигайся и помогай другим!</string>
    <string name="first_start_screen_description">Зарабатывай деньги для благотворительности своей активностью</string>
    <string name="login_button_title">Войти по логину</string>

    <!--Navigation Drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="nav_profile">Профиль</string>
    <string name="start_training">Начать тренировку</string>
    <string name="my_trainings">Мои тренировки</string>
    <string name="my_achievements">Мои достижения</string>
    <string name="events">События</string>
    <string name="settings">Настройки</string>
    <string name="logout">Выход</string>

    <!--TrainingsScreen-->
    <string name="trainings_title">Trainings</string>

    <!--ProfileScreen-->
    <string name="profile_screen_title">ProfileScreen</string>

    <!--TrackerScreen-->
    <string name="scores_title">Баллы</string>
    <string name="time_title">Время</string>

    <!--AchievementsScreen-->
    <string name="achievements_screen_title">AchievementsScreen</string>

    <!--EventsScreen-->
    <string name="events_screen">EventsScreen</string>

    <!--SelectActivityTypeScreen-->
    <string name="activity_type_title">Тип активности</string>
    <string name="favorites_tab_title">Избранное</string>
    <string name="all_tab_title">Все</string>
    <string name="apply_button_title">Подтвердить</string>

</resources>