<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".presentation.firstStartFragment.FirstStartFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/synergy_sport_logo"
        android:importantForAccessibility="no" />

    <ImageView
        android:layout_width="340dp"
        android:layout_height="340dp"
        android:layout_gravity="center"
        android:src="@drawable/synergy_sport_icon"
        android:importantForAccessibility="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TitleTextStyleBlack"
        android:text="@string/first_start_screen_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/NormalTextStyleBlack"
        android:text="@string/first_start_screen_description" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="85dp"
        android:text="@string/login_button_title"/>

</LinearLayout>