<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".presentation.fragments.selectActivityTypeFragment.SelectActivityTypeFragment">


    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="15dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/TitleTextStyleBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/activity_type_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tabs_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_layout">

        <TextView
            style="@style/NormalTextStyleWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/round_button"
            android:padding="10dp"
            android:text="@string/favorites_tab_title" />

        <TextView
            style="@style/NormalTextStyleBlack"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/all_tab_title" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/apply_button"
        app:layout_constraintTop_toBottomOf="@+id/tabs_layout" />

    <Button
        android:id="@+id/apply_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/all_tab_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>